--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,1 @@
-zeguimoko_django_todolist_bd41eff9-a6d7-4028-9c58-19f9bb7eb8b2
+sonar.projectKey=zeguimoko_django_todolist_bd41eff9-a6d7-4028-9c58-19f9bb7eb8b2
