--- a/.github/workflows/dockerhub-publish.yml
+++ b/.github/workflows/dockerhub-publish.yml
@@ -55,6 +55,6 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/django_todolist:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/django_todolist:${{ github.event.release.tag_name }}
-          cache-from: type=registry,ref=zeguimoko/django_todolist:buildcache
-          cache-to: type=registry,ref=zeguimoko/django_todolist:buildcache,mode=max
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/django_todolist:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/django_todolist:buildcache,mode=max
     
